# cuticle_analysis

./: .gitignore  GUI_main.py  Makefile  README.md  TODO.md  __main__.py  default.nix  main.py  pyproject.toml  requirements.txt  setup.py  shell.nix
.github/: CODEOWNERS
.github/workflows/: build.yml  run-tests.yml  test.yml
GUI/: const.py
GUI/objects/: image_viewer.py  textbox.py
GUI/objects/buttons/: buttons.py
cuticle_analysis/: __init__.py  analysis.py  cli.py  cnn.py  const.py  dataset.py  e2e.py  kviews.py  utils.py
cuticle_analysis/core/: __init__.py  app.py  cli.py  dataset.py
cuticle_analysis/datasets/: __init__.py  dataset.py  full.py  gabor.py  sub.py  utils.py
cuticle_analysis/gui/: const.py  gui.py  species_pane.py
cuticle_analysis/gui/objects/: image_viewer.py  textbox.py
cuticle_analysis/gui/objects/buttons/: buttons.py
cuticle_analysis/models/: __init__.py  cnn.py  e2e.py  kviews.py
nix/: default.nix  labelme.nix  sources.json
scripts/: build.sh  cnn.py  data_spread.py  experiments.py  gabor.py  run.sh  test.sh
scripts/experiments/: experiment_1.py
tests/: test_dataset.py
